--- a/algorithm/baekjoon/baekjoon_step5.ipynb
+++ b/algorithm/baekjoon/baekjoon_step5.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOehIxEbJvDQinE+Ct12A1I",
+      "authorship_tag": "ABX9TyMc6/ipZ8lpyPL40kPyNCeU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/wjdrnqja9/TIL/blob/main/baekjoon_step5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/wjdrnqja9/TIL/blob/main/algorithm/baekjoon/baekjoon_step5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -128,6 +128,50 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####1065. 어떤 양의 정수 X의 각 자리가 등차수열을 이룬다면, 그 수를 한수라고 한다. 등차수열은 연속된 두 개의 수의 차이가 일정한 수열을 말한다. N이 주어졌을 때, 1보다 크거나 같고, N보다 작거나 같은 한수의 개수를 출력하는 프로그램을 작성하시오. "
+      ],
+      "metadata": {
+        "id": "W6vM5KHnp29e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def han():\n",
+        "    a=0\n",
+        "    n=int(input())\n",
+        "    for i in range(n):\n",
+        "        i += 1\n",
+        "        if i < 100:\n",
+        "            a+=1\n",
+        "        elif i < 1000:\n",
+        "            if int(i / 100) - int(i % 100 / 10) == int(i % 100 / 10) - (i % 10):\n",
+        "                a+=1\n",
+        "    print(a)\n",
+        "han()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XwmlOYlQpdCa",
+        "outputId": "662ef9e6-51f0-48a3-c38f-13b70f6a6685"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1000\n",
+            "144\n"
+          ]
+        }
+      ]
     }
   ]
 }
