Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step6.ipynb
+++ b/algorithm/baekjoon/baekjoon_step6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "baekjoon_step6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPo59bJcn+QQACkd1kVnybN",
+      "authorship_tag": "ABX9TyNkM7oEKkC5y5njtt5DT7C1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,15 +138,49 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "#####2675. 문자열 S를 입력받은 후에, 각 문자를 R번 반복해 새 문자열 P를 만든 후 출력하는 프로그램을 작성하시오. 즉, 첫 번째 문자를 R번 반복하고, 두 번째 문자를 R번 반복하는 식으로 P를 만들면 된다. S에는 QR Code \"alphanumeric\" 문자만 들어있다.\n",
+        "\n",
+        "#####QR Code \"alphanumeric\" 문자는 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ\\$%*+-./: 이다."
       ],
       "metadata": {
-        "id": "yjJcs5G-3UL6"
+        "id": "9ty0VFO1YcIY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "for i in range(n):\n",
+        "    a, b = input().split()\n",
+        "    text = ''\n",
+        "    for i in b:\n",
+        "        text = text + int(a) * i\n",
+        "    print(text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lgQTc14bLqZq",
+        "outputId": "aa3ac3d1-14ab-4acd-dea9-86cd587134dd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3 ABC\n",
+            "AAABBBCCC\n",
+            "5 /HTP\n",
+            "/////HHHHHTTTTTPPPPP\n"
+          ]
+        }
+      ]
     }
   ]
 }
