Colaboratory를 통해 생성됨

--- a/정구범_패스트캠퍼스_데이터분석.ipynb
+++ b/정구범_패스트캠퍼스_데이터분석.ipynb
@@ -1956,18 +1956,6 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "nMTRmUkuSme1"
-      },
-      "id": "nMTRmUkuSme1",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 재구매 시 쿠폰 사용 비율\n",
         "print(df_repeat_order['coupon_title'].count()/(df_repeat_order['coupon_title'].count()+df_repeat_order['coupon_title'].isna().sum())*100)"
       ],
@@ -2366,48 +2354,27 @@
       "cell_type": "code",
       "source": [
         "# 환불율\n",
-        "print(f'{\"%0.4f\"%(3824/(3824+61433)*100)}%')"
+        "print(f'환불율 : {\"%0.2f\"%(3642/(3642+59437)*100)}%')\n",
+        "\n",
+        "# 환불 0% 시 매출 상승률\n",
+        "print(f'환불 0% 시 매출 상승률 : {\"%0.2f\"%((100/(100-5.77)-1)*100)}%')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0HpfHK8B27xi",
-        "outputId": "f8e97515-4668-4261-fb2f-8feb7d328562"
+        "outputId": "8018e9d9-ca62-4237-a011-8c4a3bf9fc61"
       },
       "id": "0HpfHK8B27xi",
-      "execution_count": 38,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5.8599%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 환불 0% 시 매출 상승률\n",
-        "print(f'{\"%0.4f\"%(100/(100-5.86)*100)}%')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FaqBfCqW3Geg",
-        "outputId": "bd414b2c-b2ff-4421-9910-0ac365d47e64"
-      },
-      "id": "FaqBfCqW3Geg",
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "106.2248%\n"
+            "환불율 : 5.77%\n",
+            "환불 0% 시 매출 상승률 : 6.12%\n"
           ]
         }
       ]
@@ -2421,6 +2388,77 @@
         "id": "JUjwne113Acm"
       },
       "id": "JUjwne113Acm"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 쿠폰을 미사용한 사람의 결제, 환불 value_counts\n",
+        "df_ORDER_delete2 = df_ORDER_delete[df_ORDER_delete.coupon_discount_rate2.isin(['미사용'])]\n",
+        "df_ORDER_delete2['type'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aRjFHX7Zh0ek",
+        "outputId": "69680925-87a4-40b5-9704-a6aa9171433f"
+      },
+      "id": "aRjFHX7Zh0ek",
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PAYMENT    30688\n",
+              "REFUND      3629\n",
+              "Name: type, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "환불자의 99.7%가 쿠폰 미사용자인 것으로 보아 \n",
+        "\n",
+        "쿠폰 사용 시 환불 불가 정책이 있는 것으로 생각된다."
+      ],
+      "metadata": {
+        "id": "ak46Q9SdlxmQ"
+      },
+      "id": "ak46Q9SdlxmQ"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 쿠폰 미사용자 환불율\n",
+        "print(f'쿠폰 미사용자 환불율 : {\"%0.2f\"%(3629/(3629+30688)*100)}%')\n",
+        "# 쿠폰 미사용자 환불 0% 시 매출 상승률\n",
+        "print(f'쿠폰 미사용자 환불 0% 시 매출 상승률 : {\"%0.2f\"%((100/(100-10.57)-1)*100)}%')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L6khgjx0jhUA",
+        "outputId": "e0d3b206-e8be-4c99-f448-7c1d1609b997"
+      },
+      "id": "L6khgjx0jhUA",
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "쿠폰 미사용자 환불율 : 10.57%\n",
+            "쿠폰 미사용자 환불 0% 시 매출 상승률 : 11.82%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3257,8 +3295,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "판매 시작한지 250일 초과된 데이터의 환불 횟수가 가장 크게,\n",
-        "30일 이하인 데이터가 가장 적게 나타났다."
+        "판매 시작한지 30~101일인 데이터의 환불 횟수가 가장 크게,\n",
+        "250일 초과인 데이터가 가장 적게 나타났다."
       ],
       "metadata": {
         "id": "UjGBbSWatEhD"
@@ -3268,7 +3306,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "-> 판매 시작한지 오래된 강의들을 재편성"
+        "-> 판매일로부터 오래 지났을 수록 환불율이 높을것이라 예상했지만 그렇지 않았다."
       ],
       "metadata": {
         "id": "BS5yHjMc6ZGX"
@@ -4610,10 +4648,7 @@
       "name": "정구범_패스트캠퍼스_데이터분석.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "f3a595ee",
-        "14bc6b5a",
-        "iDEZyFFlivwT",
-        "5OFRN-FVnHh9"
+        "14bc6b5a"
       ],
       "include_colab_link": true
     }
