Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step6.ipynb
+++ b/algorithm/baekjoon/baekjoon_step6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "baekjoon_step6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkM7oEKkC5y5njtt5DT7C1",
+      "authorship_tag": "ABX9TyN25TQ6IDDcrABfulVmkjt/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
         "id": "uJqVm_BF3HCo",
         "outputId": "ade667b3-23bb-4b77-d356-34fc6d291f87"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "id": "p_eMIfou3UWV",
         "outputId": "b4a12d9b-bce4-4c04-c13e-d8c726e0b98c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
         "id": "lgQTc14bLqZq",
         "outputId": "aa3ac3d1-14ab-4acd-dea9-86cd587134dd"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,6 +181,248 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####1157. 알파벳 대소문자로 된 단어가 주어지면, 이 단어에서 가장 많이 사용된 알파벳이 무엇인지 알아내는 프로그램을 작성하시오. 단, 대문자와 소문자를 구분하지 않는다."
+      ],
+      "metadata": {
+        "id": "QQoGVVXoHTbF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = input().upper()\n",
+        "unique_words = list(set(words))  # 입력받은 문자열에서 중복값을 제거\n",
+        "\n",
+        "cnt_list = []\n",
+        "for x in unique_words :\n",
+        "    cnt = words.count(x)\n",
+        "    cnt_list.append(cnt)  # count 숫자를 리스트에 append\n",
+        "\n",
+        "if cnt_list.count(max(cnt_list)) > 1 :  # count 숫자 최대값이 중복되면\n",
+        "    print('?')\n",
+        "else :\n",
+        "    max_index = cnt_list.index(max(cnt_list))  # count 숫자 최대값 인덱스(위치)\n",
+        "    print(unique_words[max_index])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g5QCsRKFXgl4",
+        "outputId": "419f03d9-eab5-447b-a215-4a8a9d3da757"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mississipi\n",
+            "?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####1152. 영어 대소문자와 공백으로 이루어진 문자열이 주어진다. 이 문자열에는 몇 개의 단어가 있을까? 이를 구하는 프로그램을 작성하시오. 단, 한 단어가 여러 번 등장하면 등장한 횟수만큼 모두 세어야 한다."
+      ],
+      "metadata": {
+        "id": "Lx44JS1OdeaG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = list(input().split())\n",
+        "print(len(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "veeQCc5dahK_",
+        "outputId": "59fa328a-6470-4449-dc7a-1f1992dfedfb"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The last character is a blank \n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KajDn5fzaT3B",
+        "outputId": "5045e946-d83d-4c8e-fccc-45eddbe67da6"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['The', 'Curious', 'Case', 'of', 'Benjamin', 'Button']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####2908. 상수는 수를 다른 사람과 다르게 거꾸로 읽는다. 예를 들어, 734와 893을 칠판에 적었다면, 상수는 이 수를 437과 398로 읽는다. 따라서, 상수는 두 수중 큰 수인 437을 큰 수라고 말할 것이다. 두 수가 주어졌을 때, 상수의 대답을 출력하는 프로그램을 작성하시오."
+      ],
+      "metadata": {
+        "id": "lG8QQCuhebdR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = map(str, list(input().split()))\n",
+        "\n",
+        "a = int(a[::-1])\n",
+        "b = int(b[::-1])\n",
+        "\n",
+        "if a > b:\n",
+        "    print(a)\n",
+        "else:\n",
+        "    print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yIqih1XSYSBW",
+        "outputId": "e957a795-556d-44fa-8600-9594a1e5c09b"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "221 231\n",
+            "132\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####5622. 숫자 1을 걸려면 총 2초가 필요하다. 1보다 큰 수를 거는데 걸리는 시간은 이보다 더 걸리며, 한 칸 옆에 있는 숫자를 걸기 위해선 1초씩 더 걸린다.\n",
+        "\n",
+        "상근이의 할머니는 전화 번호를 각 숫자에 해당하는 문자로 외운다. 즉, 어떤 단어를 걸 때, 각 알파벳에 해당하는 숫자를 걸면 된다. 예를 들어, UNUCIC는 868242와 같다.\n",
+        "\n",
+        "할머니가 외운 단어가 주어졌을 때, 이 전화를 걸기 위해서 필요한 최소 시간을 구하는 프로그램을 작성하시오."
+      ],
+      "metadata": {
+        "id": "oRzwNj0Tgm9b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c4rd8QuPfW5F",
+        "outputId": "18eb6d80-e908-4504-ce9d-5c120f608893"
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 152
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a={}\n",
+        "sum = 0\n",
+        "a[1] = [2]\n",
+        "a[2] = ['A', 'B', 'C', 3]\n",
+        "a[3] = ['D', 'E', 'F', 4]\n",
+        "a[4] = ['G', 'H', 'I', 5]\n",
+        "a[5] = ['J', 'K', 'L', 6]\n",
+        "a[6] = ['M', 'N', 'O', 7]\n",
+        "a[7] = ['P', 'Q', 'R', 'S', 8]\n",
+        "a[8] = ['T', 'U', 'V', 9]\n",
+        "a[9] = ['W', 'X', 'Y', 'Z', 10]\n",
+        "a[0] = [11]\n",
+        "\n",
+        "s = list(input())\n",
+        "\n",
+        "for i in range(len(s)):\n",
+        "    for j in range(10):\n",
+        "        if s[i] in a[j]:\n",
+        "            for k in range(len(a[j])):\n",
+        "                if type(a[j][k]) == int:\n",
+        "                    sum += a[j][k]\n",
+        "\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v5lVIAQdhAfJ",
+        "outputId": "e8f0a628-058b-4c71-f044-1a9efb3ffbc1"
+      },
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "UNUCIC\n",
+            "36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Xdx2h-9bun5I"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
