Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step6.ipynb
+++ b/algorithm/baekjoon/baekjoon_step6.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "baekjoon_step6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN25TQ6IDDcrABfulVmkjt/",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMJ85Y7oaMjPtStB8r4SSsu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -416,10 +417,41 @@
     {
       "cell_type": "code",
       "source": [
+        "croa = ['c=', 'c-', 'dz=', 'd-', 'lj', 'nj', 's=', 'z=']\n",
+        "a = input()\n",
+        "\n",
+        "for i in croa:\n",
+        "    if i in a:\n",
+        "        a = a.replace(i, '*')\n",
+        "\n",
+        "print(len(a))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jPo03qRmTI9v",
+        "outputId": "ef35bfee-19d2-48ae-bd7e-b227c11f9a31"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "c=c=\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "Xdx2h-9bun5I"
+        "id": "RJlT1NOxZGHY"
       },
       "execution_count": null,
       "outputs": []
