--- a/algorithm/baekjoon/baekjoon_step6.ipynb
+++ b/algorithm/baekjoon/baekjoon_step6.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step6.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJ85Y7oaMjPtStB8r4SSsu",
+      "authorship_tag": "ABX9TyPJoUJsROSrf0IVClbJQWci",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -345,32 +345,6 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c4rd8QuPfW5F",
-        "outputId": "18eb6d80-e908-4504-ce9d-5c120f608893"
-      },
-      "execution_count": 152,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['a', 'b']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 152
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "a={}\n",
         "sum = 0\n",
         "a[1] = [2]\n",
@@ -415,6 +389,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#####2941. 예전에는 운영체제에서 크로아티아 알파벳을 입력할 수가 없었다. 따라서, 다음과 같이 크로아티아 알파벳을 변경해서 입력했다.\n",
+        "\n",
+        "예를 들어, ljes=njak은 크로아티아 알파벳 6개(lj, e, š, nj, a, k)로 이루어져 있다. 단어가 주어졌을 때, 몇 개의 크로아티아 알파벳으로 이루어져 있는지 출력한다.\n",
+        "\n",
+        "dž는 무조건 하나의 알파벳으로 쓰이고, d와 ž가 분리된 것으로 보지 않는다. lj와 nj도 마찬가지이다. 위 목록에 없는 알파벳은 한 글자씩 센다."
+      ],
+      "metadata": {
+        "id": "9N2ANbPWaJKF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "croa = ['c=', 'c-', 'dz=', 'd-', 'lj', 'nj', 's=', 'z=']\n",
@@ -446,12 +433,169 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#####1316. 그룹 단어란 단어에 존재하는 모든 문자에 대해서, 각 문자가 연속해서 나타나는 경우만을 말한다. 예를 들면, ccazzzzbb는 c, a, z, b가 모두 연속해서 나타나고, kin도 k, i, n이 연속해서 나타나기 때문에 그룹 단어이지만, aabbbccb는 b가 떨어져서 나타나기 때문에 그룹 단어가 아니다.\n",
+        "\n",
+        "단어 N개를 입력으로 받아 그룹 단어의 개수를 출력하는 프로그램을 작성하시오."
+      ],
+      "metadata": {
+        "id": "eXlpO4qmaSrG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "sum = 0\n",
+        "\n",
+        "for i in range(n):\n",
+        "\n",
+        "    a = input()\n",
+        "    o = len(a)-1\n",
+        "    x = 0\n",
+        "\n",
+        "    if len(a) < 3:\n",
+        "        sum +=1\n",
+        "    else:\n",
+        "        for i in range(len(a)-2):\n",
+        "            \n",
+        "            o -= 1\n",
+        "\n",
+        "            for j in range(o):\n",
+        "                if a[i] == a[i+j+2]:\n",
+        "                    x += 1\n",
+        "            else:\n",
+        "                pass\n",
+        "\n",
+        "        if x == 0:\n",
+        "            sum+=1\n",
+        "\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RJlT1NOxZGHY",
+        "outputId": "6c912b0a-7ae3-43af-d5fa-4eb006019020"
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "aaca\n",
+            "acac\n",
+            "cxzv\n",
+            "zxcbzx\n",
+            "bzcvb\n",
+            "xbcv\n",
+            "basrb\n",
+            "sdfhsb\n",
+            "xcbvn\n",
+            "qwert\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "a = ['avadcva']"
+      ],
+      "metadata": {
+        "id": "MQTQZ7dPZ8Mj"
+      },
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = []\n",
+        "a.append(1)"
+      ],
+      "metadata": {
+        "id": "WbeVVYp2a09B"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 'assa'"
+      ],
+      "metadata": {
+        "id": "HVm4mcCpb4Ah"
+      },
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bYtleUiqd-bS",
+        "outputId": "ab2aa106-40e5-4b78-af34-cb77a63e467a"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['assa']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[0] == a[3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OAlySFsNcTOO",
+        "outputId": "9eb2e769-602c-4dee-e084-926d517d8ad6"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "RJlT1NOxZGHY"
+        "id": "T0iGRESKe5j6"
       },
       "execution_count": null,
       "outputs": []
