Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step6.ipynb
+++ b/algorithm/baekjoon/baekjoon_step6.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step6.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPJoUJsROSrf0IVClbJQWci",
+      "authorship_tag": "ABX9TyNmvyaWYeGl2AB2/jLzuRJj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -216,7 +216,7 @@
         "id": "g5QCsRKFXgl4",
         "outputId": "419f03d9-eab5-447b-a215-4a8a9d3da757"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
         "id": "veeQCc5dahK_",
         "outputId": "59fa328a-6470-4449-dc7a-1f1992dfedfb"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
         "id": "KajDn5fzaT3B",
         "outputId": "5045e946-d83d-4c8e-fccc-45eddbe67da6"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +317,7 @@
         "id": "yIqih1XSYSBW",
         "outputId": "e957a795-556d-44fa-8600-9594a1e5c09b"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
         "id": "v5lVIAQdhAfJ",
         "outputId": "e8f0a628-058b-4c71-f044-1a9efb3ffbc1"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
         "id": "jPo03qRmTI9v",
         "outputId": "ef35bfee-19d2-48ae-bd7e-b227c11f9a31"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
     {
       "cell_type": "code",
       "source": [
-        "n = int(input())\n",
+        "n = int(input()) # 왜안돼\n",
         "sum = 0\n",
         "\n",
         "for i in range(n):\n",
@@ -457,16 +457,15 @@
         "\n",
         "    if len(a) < 3:\n",
         "        sum +=1\n",
-        "    else:\n",
-        "        for i in range(len(a)-2):\n",
-        "            \n",
-        "            o -= 1\n",
         "\n",
+        "    else:\n",
+        "\n",
+        "        for i in range(len(a)-2):                        \n",
+        "            o -= 1\n",
         "            for j in range(o):\n",
+        "                \n",
         "                if a[i] == a[i+j+2]:\n",
         "                    x += 1\n",
-        "            else:\n",
-        "                pass\n",
         "\n",
         "        if x == 0:\n",
         "            sum+=1\n",
@@ -478,26 +477,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RJlT1NOxZGHY",
-        "outputId": "6c912b0a-7ae3-43af-d5fa-4eb006019020"
+        "outputId": "52dd4c9f-aea6-4399-8b73-8c27f7141634"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10\n",
-            "aaca\n",
-            "acac\n",
-            "cxzv\n",
-            "zxcbzx\n",
-            "bzcvb\n",
-            "xbcv\n",
-            "basrb\n",
-            "sdfhsb\n",
-            "xcbvn\n",
-            "qwert\n",
-            "4\n"
+            "3\n",
+            "happy\n",
+            "new\n",
+            "year\n",
+            "3\n"
           ]
         }
       ]
@@ -505,100 +497,35 @@
     {
       "cell_type": "code",
       "source": [
+        "sum = 0\n",
         "\n",
-        "a = ['avadcva']"
-      ],
-      "metadata": {
-        "id": "MQTQZ7dPZ8Mj"
-      },
-      "execution_count": 129,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = []\n",
-        "a.append(1)"
-      ],
-      "metadata": {
-        "id": "WbeVVYp2a09B"
-      },
-      "execution_count": 79,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = 'assa'"
-      ],
-      "metadata": {
-        "id": "HVm4mcCpb4Ah"
-      },
-      "execution_count": 96,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a"
+        "for i in range(int(input())):\n",
+        "    word = input()\n",
+        "    if list(word) == sorted(word, key=word.find):\n",
+        "        sum +=1\n",
+        "print(sum)    "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "bYtleUiqd-bS",
-        "outputId": "ab2aa106-40e5-4b78-af34-cb77a63e467a"
+        "id": "lYMtYD5QxPDa",
+        "outputId": "db8c5b2f-dce9-480a-b74f-9dc0561f4dea"
       },
-      "execution_count": 95,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['assa']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 95
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "happy\n",
+            "new\n",
+            "year\n",
+            "3\n"
+          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a[0] == a[3]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OAlySFsNcTOO",
-        "outputId": "9eb2e769-602c-4dee-e084-926d517d8ad6"
-      },
-      "execution_count": 98,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 98
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "T0iGRESKe5j6"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
