--- a/algorithm/baekjoon/baekjoon_step7.ipynb
+++ b/algorithm/baekjoon/baekjoon_step7.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMdBsvSpXS98Fpec1doP53u",
+      "authorship_tag": "ABX9TyNGyROUDFOxgn8KG4os0P3s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,6 +174,153 @@
         "id": "bABddN4BiUdB"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####10250. ACM 호텔 매니저 지우는 손님이 도착하는 대로 빈 방을 배정하고 있다. 고객 설문조사에 따르면 손님들은 호텔 정문으로부터 걸어서 가장 짧은 거리에 있는 방을 선호한다고 한다. 여러분은 지우를 도와 줄 프로그램을 작성하고자 한다. 즉 설문조사 결과 대로 호텔 정문으로부터 걷는 거리가 가장 짧도록 방을 배정하는 프로그램을 작성하고자 한다.\n",
+        "\n",
+        "문제를 단순화하기 위해서 호텔은 직사각형 모양이라고 가정하자. 각 층에 W 개의 방이 있는 H 층 건물이라고 가정하자 (1 ≤ H, W ≤ 99). 그리고 엘리베이터는 가장 왼쪽에 있다고 가정하자(그림 1 참고). 이런 형태의 호텔을 H × W 형태 호텔이라고 부른다. 호텔 정문은 일층 엘리베이터 바로 앞에 있는데, 정문에서 엘리베이터까지의 거리는 무시한다. 또 모든 인접한 두 방 사이의 거리는 같은 거리(거리 1)라고 가정하고 호텔의 정면 쪽에만 방이 있다고 가정한다.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ssYOY6BoL2QI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "for i in range(n):\n",
+        "    room=[]\n",
+        "    H, W, N = map(int, input().split())\n",
+        "\n",
+        "    for i in range(W):\n",
+        "        for j in range(H):\n",
+        "            room.append((j+1)*100+(i+1))\n",
+        "\n",
+        "    print(room[N-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GU8GBF4FMCzH",
+        "outputId": "ec6e4351-98d5-4faf-be23-204c41d8108d"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "6 12 10\n",
+            "402\n",
+            "30 50 72\n",
+            "1203\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####2775. 평소 반상회에 참석하는 것을 좋아하는 주희는 이번 기회에 부녀회장이 되고 싶어 각 층의 사람들을 불러 모아 반상회를 주최하려고 한다.\n",
+        "\n",
+        "이 아파트에 거주를 하려면 조건이 있는데, “a층의 b호에 살려면 자신의 아래(a-1)층의 1호부터 b호까지 사람들의 수의 합만큼 사람들을 데려와 살아야 한다” 는 계약 조항을 꼭 지키고 들어와야 한다.\n",
+        "\n",
+        "아파트에 비어있는 집은 없고 모든 거주민들이 이 계약 조건을 지키고 왔다고 가정했을 때, 주어지는 양의 정수 k와 n에 대해 k층에 n호에는 몇 명이 살고 있는지 출력하라. 단, 아파트에는 0층부터 있고 각층에는 1호부터 있으며, 0층의 i호에는 i명이 산다."
+      ],
+      "metadata": {
+        "id": "Jmf-mYHGVNvW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T = int(input())\n",
+        "sum1=0\n",
+        "sum2=0\n",
+        "for i in range(T):\n",
+        "    k = int(input())\n",
+        "    n = int(input())\n",
+        "    for i in range(k):\n",
+        "        \n",
+        "        for i in range(n):\n",
+        "            sum1+=n\n",
+        "            n-=1\n",
+        "    "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IMED7YuFWP71",
+        "outputId": "55c09edd-95b5-4c49-c313-6f11b8a49245"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(k):  \n",
+        "    for j in range(n):\n",
+        "        j+=1\n",
+        "        sum1+=j\n",
+        "        print(sum1)\n",
+        "    sum2+=sum1\n",
+        "    print(sum2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RRA-B4QCZKDj",
+        "outputId": "676d46ec-fc63-4a16-9824-6838416081b9"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "6\n",
+            "6\n",
+            "7\n",
+            "9\n",
+            "12\n",
+            "18\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum1=0\n",
+        "sum2=0\n",
+        "n=3"
+      ],
+      "metadata": {
+        "id": "yOUMHtqiZKfO"
+      },
+      "execution_count": 88,
       "outputs": []
     }
   ]
