Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step7.ipynb
+++ b/algorithm/baekjoon/baekjoon_step7.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGyROUDFOxgn8KG4os0P3s",
+      "authorship_tag": "ABX9TyOOGLRCesqPfywxGO2/6K2H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,7 @@
         "id": "GU8GBF4FMCzH",
         "outputId": "ec6e4351-98d5-4faf-be23-204c41d8108d"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,86 +242,38 @@
       "cell_type": "code",
       "source": [
         "T = int(input())\n",
-        "sum1=0\n",
-        "sum2=0\n",
         "for i in range(T):\n",
-        "    k = int(input())\n",
-        "    n = int(input())\n",
-        "    for i in range(k):\n",
-        "        \n",
-        "        for i in range(n):\n",
-        "            sum1+=n\n",
-        "            n-=1\n",
-        "    "
+        "    floor = int(input())\n",
+        "    room = int(input())\n",
+        "    people = [j for j in range(1, room+1)]\n",
+        "    for k in range(floor):\n",
+        "        for v in range(room-1):\n",
+        "            people[v+1] += people[v]\n",
+        "    print(people[-1])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "IMED7YuFWP71",
-        "outputId": "55c09edd-95b5-4c49-c313-6f11b8a49245"
+        "id": "IHZFq9W-A907",
+        "outputId": "6db597aa-7ce1-4dda-b726-4e4475c88368"
       },
-      "execution_count": 66,
+      "execution_count": 1,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "1\n",
             "2\n",
-            "3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(k):  \n",
-        "    for j in range(n):\n",
-        "        j+=1\n",
-        "        sum1+=j\n",
-        "        print(sum1)\n",
-        "    sum2+=sum1\n",
-        "    print(sum2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RRA-B4QCZKDj",
-        "outputId": "676d46ec-fc63-4a16-9824-6838416081b9"
-      },
-      "execution_count": 89,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
             "1\n",
             "3\n",
             "6\n",
-            "6\n",
-            "7\n",
-            "9\n",
-            "12\n",
-            "18\n"
+            "2\n",
+            "3\n",
+            "10\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sum1=0\n",
-        "sum2=0\n",
-        "n=3"
-      ],
-      "metadata": {
-        "id": "yOUMHtqiZKfO"
-      },
-      "execution_count": 88,
-      "outputs": []
     }
   ]
 }
