Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step7.ipynb
+++ b/algorithm/baekjoon/baekjoon_step7.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOGLRCesqPfywxGO2/6K2H",
+      "authorship_tag": "ABX9TyOQecafIny9Hk5j2cwShCM4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,7 +258,7 @@
         "id": "IHZFq9W-A907",
         "outputId": "6db597aa-7ce1-4dda-b726-4e4475c88368"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,6 +271,126 @@
             "2\n",
             "3\n",
             "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####2839. 상근이는 요즘 설탕공장에서 설탕을 배달하고 있다. 상근이는 지금 사탕가게에 설탕을 정확하게 N킬로그램을 배달해야 한다. 설탕공장에서 만드는 설탕은 봉지에 담겨져 있다. 봉지는 3킬로그램 봉지와 5킬로그램 봉지가 있다.\n",
+        "\n",
+        "상근이는 귀찮기 때문에, 최대한 적은 봉지를 들고 가려고 한다. 예를 들어, 18킬로그램 설탕을 배달해야 할 때, 3킬로그램 봉지 6개를 가져가도 되지만, 5킬로그램 3개와 3킬로그램 1개를 배달하면, 더 적은 개수의 봉지를 배달할 수 있다.\n",
+        "\n",
+        "상근이가 설탕을 정확하게 N킬로그램 배달해야 할 때, 봉지 몇 개를 가져가면 되는지 그 수를 구하는 프로그램을 작성하시오."
+      ],
+      "metadata": {
+        "id": "Yg9YcVOfDq-O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "if (n % 5) % 3 == 0:\n",
+        "    print((n // 5) + int((n % 5 /3)))\n",
+        "\n",
+        "elif (n % 3) % 5 == 0:\n",
+        "    print((n // 3) + int((n % 3/ 5)))\n",
+        "\n",
+        "elif (n % 3) == 0:\n",
+        "    print(n // 3) \n",
+        "\n",
+        "else:\n",
+        "    print(-1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rx-l2UvpDprd",
+        "outputId": "e4043de4-3cb6-4f96-9205-44c95690203c"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11\n",
+            "-1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(n%5) % 3 == 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dgu8mg2_GkaZ",
+        "outputId": "4f82c01e-e782-4f16-cac1-c690b59c3e41"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "three = 0\n",
+        "five = 0\n",
+        "\n",
+        "while n != 0:\n",
+        "    \n",
+        "    if n % 5 == 0:\n",
+        "        five = n // 5\n",
+        "        n = n % 5\n",
+        "\n",
+        "    elif n == 2 or n == 1:\n",
+        "        five = 0\n",
+        "        three = -1\n",
+        "        break\n",
+        "        \n",
+        "    else:\n",
+        "        n-=3\n",
+        "        three += 1\n",
+        "    \n",
+        "        \n",
+        "print(five+three)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SHnImHQ8IF6j",
+        "outputId": "5b4f19fa-ab6a-4cb8-a871-d503edb1aa00"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4999\n",
+            "1001\n"
           ]
         }
       ]
