Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step8.ipynb
+++ b/algorithm/baekjoon/baekjoon_step8.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step8.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfW8vQf/9CJt3W1lFj8cNt",
+      "authorship_tag": "ABX9TyP85ncj0Oq/i7kBpMzc5ClZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "id": "BmP3PfIlXVN7",
         "outputId": "950d5c01-e17a-4cb8-d055-96a74912fbc2"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         "id": "-Yj5CX9_dSxd",
         "outputId": "0a29c95d-caa9-47ab-9aa8-a85d5e3e1421"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,6 +106,136 @@
             "1 3 5 7\n",
             "3\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2581. 자연수 M과 N이 주어질 때 M이상 N이하의 자연수 중 소수인 것을 모두 골라 이들 소수의 합과 최솟값을 찾는 프로그램을 작성하시오.\n",
+        "\n",
+        "예를 들어 M=60, N=100인 경우 60이상 100이하의 자연수 중 소수는 61, 67, 71, 73, 79, 83, 89, 97 총 8개가 있으므로, 이들 소수의 합은 620이고, 최솟값은 61이 된다."
+      ],
+      "metadata": {
+        "id": "iEcU6DnJAyHH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M = int(input())\n",
+        "N = int(input())\n",
+        "prime=[]\n",
+        "for i in range(M,N+1):\n",
+        "    prime.append(i)\n",
+        "if 1 in prime:\n",
+        "    prime.remove(1)\n",
+        "\n",
+        "for i in range(M,N+1):\n",
+        "    for j in range(2, i//2+1):\n",
+        "        if i%j == 0:\n",
+        "            prime.remove(i)\n",
+        "            break\n",
+        "            \n",
+        "if len(prime) != 0:\n",
+        "    print(sum(prime))\n",
+        "    print(min(prime))\n",
+        "\n",
+        "else:\n",
+        "        print(-1)"
+      ],
+      "metadata": {
+        "id": "eqyrCIuTc_2p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "12ff7697-c91a-4bee-dd72-bc9ce785a79a"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "60\n",
+            "100\n",
+            "620\n",
+            "61\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "11653. 정수 N이 주어졌을 때, 소인수분해하는 프로그램을 작성하시오."
+      ],
+      "metadata": {
+        "id": "1-p6l1V1MXf2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "N = int(input())\n",
+        "\n",
+        "while N%"
+      ],
+      "metadata": {
+        "id": "PtrkSHnhA6t2"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lV7mky5GBatg",
+        "outputId": "ce92d924-267b-4c82-b94b-1c9e91c35f63"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(a) != 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dSpPXQVRFfxs",
+        "outputId": "a3163f42-cd34-4a83-ae7b-4787e29db3f0"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
