Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step8.ipynb
+++ b/algorithm/baekjoon/baekjoon_step8.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step8.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP85ncj0Oq/i7kBpMzc5ClZ",
+      "authorship_tag": "ABX9TyP6dldterTJkFESxsY0E03d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,67 +177,94 @@
     {
       "cell_type": "code",
       "source": [
-        "N = int(input())\n",
+        "N = int(input()) # 시간 초과\n",
+        "prime=[]\n",
         "\n",
-        "while N%"
-      ],
-      "metadata": {
-        "id": "PtrkSHnhA6t2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sum(a)"
+        "for i in range(2,N+1):\n",
+        "    prime.append(i)\n",
+        "\n",
+        "for i in range(2,N+1):\n",
+        "    for j in range(2, i//2+1):\n",
+        "        if i%j == 0:\n",
+        "            prime.remove(i)\n",
+        "            break\n",
+        "\n",
+        "i=0\n",
+        "\n",
+        "while N != 1:\n",
+        "\n",
+        "    if N % prime[i] == 0:\n",
+        "\n",
+        "        print(prime[i])\n",
+        "        N = N//prime[i]\n",
+        "\n",
+        "    else:\n",
+        "        i+=1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "lV7mky5GBatg",
-        "outputId": "ce92d924-267b-4c82-b94b-1c9e91c35f63"
+        "id": "F2Br1sABkjTo",
+        "outputId": "e6888c07-bc7c-4219-e7de-103c7bd151ff"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "21"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9991\n",
+            "97\n",
+            "103\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "len(a) != 0"
+        "N = int(input())\n",
+        "while N != 1:\n",
+        "    for i in range(2, N+1):\n",
+        "        if N % i == 0:\n",
+        "            print(i)\n",
+        "            N = N // i\n",
+        "            break"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dSpPXQVRFfxs",
-        "outputId": "a3163f42-cd34-4a83-ae7b-4787e29db3f0"
+        "outputId": "b2242829-2b4b-42de-ecc2-c53e71de1233"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "72\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "3\n",
+            "3\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "UHZirihznGNZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
