Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step8.ipynb
+++ b/algorithm/baekjoon/baekjoon_step8.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step8.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP6dldterTJkFESxsY0E03d",
+      "authorship_tag": "ABX9TyNsPvqJdxfGtRsjnOnvVm4r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,10 +258,53 @@
     {
       "cell_type": "code",
       "source": [
+        "M, N = map(int, input().split()) # 시간  초과\n",
+        "\n",
+        "prime=[]\n",
+        "for i in range(M,N+1):\n",
+        "    prime.append(i)\n",
+        "if 1 in prime:\n",
+        "    prime.remove(1)\n",
+        "\n",
+        "for i in range(M,N+1):\n",
+        "    for j in range(2, i//2+1):\n",
+        "        if i%j == 0:\n",
+        "            prime.remove(i)\n",
+        "            break\n",
+        "\n",
+        "for i in prime:\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UHZirihznGNZ",
+        "outputId": "b7a6c23c-3f73-44df-d708-3ba70f0b2e76"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 16\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "11\n",
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "UHZirihznGNZ"
+        "id": "KFdiD9H1q331"
       },
       "execution_count": null,
       "outputs": []
